fixed padding on mobile

--- a/client/stylesheets/app.scss
+++ b/client/stylesheets/app.scss
@@ -39,7 +39,7 @@
 
 
 .login-rodape {
-    margin-top: 40px;
+    margin-top: 25px;
     .esqueceu-senha {
         float: left
     }
@@ -51,7 +51,7 @@
 }
 
 .login-container {
-    padding: 20px 80px 20px 80px;
+    padding: 20px 20px 20px 20px;
     h1 {
         color: white;
         margin-bottom: 50px;
@@ -62,7 +62,7 @@
         margin-top: 20px;
         text-align:center;
         width:100%;
-        margin-bottom: 70px;
+        margin-bottom: 50px;
         .login-image {
             max-width: 386px;
             width: 100%;
@@ -70,7 +70,9 @@
         }
     }
     .login-form-container {
-
+        .list {
+            margin-bottom: 0px;
+        }
         .card.at-error {
             margin: 0px 0px 20px 0px;
             .item {
@@ -85,7 +87,7 @@
         }       
 
         .padding {
-            padding: 20px 0px 0px 0px;
+            padding: 0px 0px 0px 0px;
         }         
     }
 }
@@ -144,7 +146,7 @@
 .view-login {
     background-color: $positive;
     color: white;
-    font-size: 18px;
+    font-size: 14px;
     padding-top: 20px;
 
     a {
